--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^35.0.1",
+    "@ckeditor/ckeditor5-autoformat": "^35.0.1",
+    "@ckeditor/ckeditor5-autosave": "^35.0.1",
+    "@ckeditor/ckeditor5-basic-styles": "^35.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1",
+    "@ckeditor/ckeditor5-editor-classic": "^35.0.1",
+    "@ckeditor/ckeditor5-essentials": "^35.0.1",
+    "@ckeditor/ckeditor5-font": "^35.0.1",
+    "@ckeditor/ckeditor5-heading": "^35.0.1",
+    "@ckeditor/ckeditor5-highlight": "^35.0.1",
+    "@ckeditor/ckeditor5-image": "^35.0.1",
+    "@ckeditor/ckeditor5-link": "^35.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^35.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@ckeditor/ckeditor5-table": "^35.0.1",
     "@fortawesome/fontawesome-free": "6.1.2",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
     "@fortawesome/free-brands-svg-icons": "6.1.2",
     "@fortawesome/free-regular-svg-icons": "6.1.2",
-    "@fortawesome/free-solid-svg-icons": "6.1.2",
-    "@fortawesome/react-fontawesome": "0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.2",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
