--- a/package.json
+++ b/package.json
@@ -3,21 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^35.0.1",
-    "@ckeditor/ckeditor5-autoformat": "^35.0.1",
-    "@ckeditor/ckeditor5-autosave": "^35.0.1",
-    "@ckeditor/ckeditor5-basic-styles": "^35.0.1",
     "@ckeditor/ckeditor5-build-classic": "^35.0.1",
-    "@ckeditor/ckeditor5-editor-classic": "^35.0.1",
-    "@ckeditor/ckeditor5-essentials": "^35.0.1",
-    "@ckeditor/ckeditor5-font": "^35.0.1",
-    "@ckeditor/ckeditor5-heading": "^35.0.1",
-    "@ckeditor/ckeditor5-highlight": "^35.0.1",
     "@ckeditor/ckeditor5-image": "^35.0.1",
-    "@ckeditor/ckeditor5-link": "^35.0.1",
-    "@ckeditor/ckeditor5-paragraph": "^35.0.1",
     "@ckeditor/ckeditor5-react": "^5.0.2",
-    "@ckeditor/ckeditor5-table": "^35.0.1",
     "@fortawesome/fontawesome-free": "6.1.2",
     "@fortawesome/fontawesome-svg-core": "6.1.2",
     "@fortawesome/free-brands-svg-icons": "6.1.2",
@@ -58,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^35.0.1"
   }
 }
